--- a/client/index.html
+++ b/client/index.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
 
-    <title>Vahis Pet World – Find Your New Best Friend</title>
-    <meta property="og:title" content="Vahis Pet World – PuppyMatch AI" />
-    <meta property="og:description" content="Find your perfect furry companion with PuppyMatch AI. Vahis Pet World connects happy humans with healthy, verified pets in Jubilee Hills, Hyderabad." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="/attached_assets/generated_images/hero.png" /> 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@replit" />
-    <meta name="twitter:title" content="Vahis Pet World – PuppyMatch AI" />
-    <meta name="twitter:description" content="Find your perfect furry companion with PuppyMatch AI. Vahis Pet World connects happy humans with healthy, verified pets in Jubilee Hills, Hyderabad." />
-    <meta name="twitter:image" content="/attached_assets/generated_images/hero.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
 
-    <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200..1000&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <title>Vahis Pet World – Find Your New Best Friend</title>
+  <meta property="og:title" content="Vahis Pet World – PuppyMatch AI" />
+  <meta property="og:description"
+    content="Find your perfect furry companion with PuppyMatch AI. Vahis Pet World connects happy humans with healthy, verified pets in Jubilee Hills, Hyderabad." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/Hogger_logo.png" />
+  <meta name="twitter:title" content="Vahis Pet World – PuppyMatch AI" />
+  <meta name="twitter:description"
+    content="Find your perfect furry companion with PuppyMatch AI. Vahis Pet World connects happy humans with healthy, verified pets in Jubilee Hills, Hyderabad." />
+  <meta name="twitter:image" content="/Hogger_logo.png" />
+
+  <link rel="icon" type="image/png" href="/Hogger_logo.png" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Nunito:wght@200..1000&family=Quicksand:wght@300..700&display=swap"
+    rel="stylesheet">
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
